--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,32 +2,45 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# Critical Scale Invariance in a Healthy Human Heart Rate\n",
+    "# (Quantum) Game of Life\n",
     "\n",
     "### Description\n",
     "\n",
-    "In this project you will analyse from a physics perspective time series of human heart rate. You will demonstrate the robust scale-invariance in the probability density function (PDF) of detrended healthy human heart rate increments. Moreover, you will show that such increments are not Gaussian distributed, but they display fat tails. This scale-independent and fractal structure supports the view that a healthy human heart rate is controlled to converge continually to a critical state.\n",
-    "\n",
-    "### References\n",
-    "\n",
-    "* Original paper: https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.93.178103\n",
+    "[Game of Life](http://en.wikipedia.org/wiki/Conway's_Game_of_Life) (GoF) is a cellular automaton devised by the British mathematician John Horton Conway in 1970. The game is a zero-player game, meaning that its evolution is determined by its initial state, requiring no further input. One interacts with the Game of Life by creating an initial configuration and observing how it evolves, or, for advanced players, by creating patterns with particular properties.\n",
     "\n",
     "\n",
-    "### Assignment\n",
+    "The universe of the Game of Life is an infinite two-dimensional orthogonal grid of square cells, each of which is in one of two possible states, live or dead. Every cell interacts with its eight neighbours, which are the cells that are directly horizontally, vertically, or diagonally adjacent. At each step in time, the following transitions occur:\n",
     "\n",
-    "1. build the cumulative time series B(i) from the detrended and normalised heart beat time series b(i)\n",
-    "2. Do a polynomial fit of B(i)\n",
-    "3. Calculate the  increments (fluctuation) from the polynomial fit\n",
-    "4. Build the increments PDF and fit it with Gaussian and non Gaussian distributions.\n",
-    "5. Test the scale invariance of the PDFs by collapse plot\n",
+    "* Any live cell with fewer than two live neighbours dies, as if by needs caused by underpopulation.\n",
+    "* Any live cell with more than three live neighbours dies, as if by overcrowding.\n",
+    "* Any live cell with two or three live neighbours lives, unchanged, to the next generation.\n",
+    "* Any dead cell with exactly three live neighbours becomes a live cell.\n",
+    "\n",
+    "The initial pattern constitutes the 'seed' of the system. The first generation is created by applying the above rules simultaneously to every cell in the seed – births and deaths happen simultaneously, and the discrete moment at which this happens is sometimes called a tick. (In other words, each generation is a pure function of the one before.) The rules continue to be applied repeatedly to create further generations.\n",
+    "\n",
+    "And so far is the standard stuff.. As for most of things, there is a quantum version of GoL as discribed in the [paper](https://arxiv.org/abs/1010.4666) by prof. Montangero et al. I know nothing about it, but you can check whether you can extend the simulation of the standard game to its quantum version.\n",
     "\n",
     "\n",
     "\n",
-    "### Contacts\n",
     "\n",
-    "Samir Suweis <samir.suweis@unipd.it>"
+    "### Assignments\n",
+    "\n",
+    "* Start off implementing the GoF's rules and play with simple seeds in small dimensions\n",
+    "* Increase the size of the GoF's world and play with more advanced pattern\n",
+    "* Implement examples of the three categories of patterns *still lifes*, *oscillators* and *spaceships*\n",
+    "* Analyse the evolutions of the patters in terms of frequency, replication, occupancy, etc.\n",
+    "* (If not to complicated) Implement the quantum version of the game\n",
+    "\n",
+    "\n",
+    "### Contacts \n",
+    "\n",
+    "* Marco Zanetti <marco.zanetti@unipd.it>\n",
+    "* Simone Montangero <simone.montangero@unipd.it>\n",
+    "  "
    ]
   },
   {
@@ -40,7 +53,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -54,9 +67,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
