--- a/Project.ipynb
+++ b/Project.ipynb
@@ -4,30 +4,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Critical Scale Invariance in a Healthy Human Heart Rate\n",
+    "# Magic data analysis\n",
     "\n",
     "### Description\n",
     "\n",
-    "In this project you will analyse from a physics perspective time series of human heart rate. You will demonstrate the robust scale-invariance in the probability density function (PDF) of detrended healthy human heart rate increments. Moreover, you will show that such increments are not Gaussian distributed, but they display fat tails. This scale-independent and fractal structure supports the view that a healthy human heart rate is controlled to converge continually to a critical state.\n",
+    "The data are Monte Carlo generated to simulate registration of high energy gamma particles in a ground-based atmospheric Cherenkov gamma telescope using the imaging technique. Cherenkov gamma telescope observes high energy gamma rays, taking advantage of the radiation emitted by charged particles produced inside the electromagnetic showers initiated by the gammas, and developing in the atmosphere. This Cherenkov radiation (of visible to UV wavelengths) leaks through the atmosphere and gets recorded in the detector, allowing reconstruction of the shower parameters. The available information consists of pulses left by the incoming Cherenkov photons on the photomultiplier tubes, arranged in a plane, the camera. Depending on the energy of the primary gamma, a total of few hundreds to some 10000 Cherenkov photons get collected, in patterns (called the shower image), allowing to discriminate statistically those caused by primary gammas (signal) from the images of hadronic showers initiated by cosmic rays in the upper atmosphere (background). \n",
+    "\n",
+    "Typically, the image of a shower after some pre-processing is an elongated cluster. Its long axis is oriented towards the camera center if the shower axis is parallel to the telescope's optical axis, i.e. if the telescope axis is directed towards a point source. A principal component analysis is performed in the camera plane, which results in a correlation axis and defines an ellipse. If the depositions were distributed as a bivariate Gaussian, this would be an equidensity ellipse. The characteristic parameters of this ellipse (often called Hillas parameters) are among the image parameters that can be used for discrimination. The energy depositions are typically asymmetric along the major axis, and this asymmetry can also be used in discrimination. There are, in addition, further discriminating characteristics, like the extent of the cluster in the image plane, or the total sum of depositions. \n",
+    "\n",
+    "The program was run with parameters allowing to observe events with energies down to below 50 GeV.\n",
+    "\n",
+    "### Dataset\n",
+    "\n",
+    "The dataset is available at this [link](https://archive.ics.uci.edu/ml/machine-learning-databases/magic/magic04.data)\n",
+    "\n",
+    "Attribute Information:\n",
+    "\n",
+    "1. fLength: continuous # major axis of ellipse [mm] \n",
+    "2. fWidth: continuous # minor axis of ellipse [mm] \n",
+    "3. fSize: continuous # 10-log of sum of content of all pixels [in #phot] \n",
+    "4. fConc: continuous # ratio of sum of two highest pixels over fSize [ratio] \n",
+    "5. fConc1: continuous # ratio of highest pixel over fSize [ratio] \n",
+    "6. fAsym: continuous # distance from highest pixel to center, projected onto major axis [mm] \n",
+    "7. fM3Long: continuous # 3rd root of third moment along major axis [mm] \n",
+    "8. fM3Trans: continuous # 3rd root of third moment along minor axis [mm] \n",
+    "9. fAlpha: continuous # angle of major axis with vector to origin [deg] \n",
+    "10. fDist: continuous # distance from origin to center of ellipse [mm] \n",
+    "11. class: g,h # gamma (signal), hadron (background) \n",
+    "\n",
+    "g = gamma (signal): 12332 \n",
+    "h = hadron (background): 6688 \n",
+    "\n",
+    "For technical reasons, the number of h events is underestimated. In the real data, the h class represents the majority of the events. \n",
+    "\n",
+    "The simple classification accuracy is not meaningful for this data, since classifying a background event as signal is worse than classifying a signal event as background. For comparison of different classifiers an ROC curve has to be used. The relevant points on this curve are those, where the probability of accepting a background event as signal is below one of the following thresholds: 0.01, 0.02, 0.05, 0.1, 0.2 depending on the required quality of the sample of the accepted events for different experiments.\n",
+    "\n",
     "\n",
     "### References\n",
     "\n",
-    "* Original paper: https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.93.178103\n",
+    "Bock, R.K., Chilingarian, A., Gaug, M., Hakl, F., Hengstebeck, T., Jirina, M., Klaschka, J., Kotrc, E., Savicky, P., Towers, S., Vaicilius, A., Wittek W. (2004). \n",
+    "Methods for multidimensional event classification: a case study using images from a Cherenkov gamma-ray telescope. \n",
+    "Nucl.Instr.Meth. A, 516, pp. 511-528. \n",
     "\n",
+    "P. Savicky, E. Kotrc. \n",
+    "Experimental Study of Leaf Confidences for Random Forest. \n",
+    "Proceedings of COMPSTAT 2004, In: Computational Statistics. (Ed.: Antoch J.) - Heidelberg, Physica Verlag 2004, pp. 1767-1774. \n",
     "\n",
-    "### Assignment\n",
+    "J. Dvorak, P. Savicky. \n",
+    "Softening Splits in Decision Trees Using Simulated Annealing. \n",
+    "Proceedings of ICANNGA 2007, Warsaw, (Ed.: Beliczynski et. al), Part I, LNCS 4431, pp. 721-729.\n",
     "\n",
-    "1. build the cumulative time series B(i) from the detrended and normalised heart beat time series b(i)\n",
-    "2. Do a polynomial fit of B(i)\n",
-    "3. Calculate the  increments (fluctuation) from the polynomial fit\n",
-    "4. Build the increments PDF and fit it with Gaussian and non Gaussian distributions.\n",
-    "5. Test the scale invariance of the PDFs by collapse plot\n",
+    "Aharonian, F. et al.\n",
+    "The Energy Spectrum of TeV Gamma-Rays from the Crab Nebula as measured by the HEGRA system of imaging air Cherenkov telescopes\n",
+    "Astrophys. J. 539 (2000) 317-324\n",
     "\n",
+    "Aleksic, J. et al.\n",
+    "Measurement of the Crab Nebula spectrum over three decades in energy with the MAGIC telescopes\n",
+    "Journal of High Energy Astrophysics, 5–6 (2015) 30-38.\n",
+    "\n",
+    "### Assignments\n",
+    "\n",
+    "The main goal is to distinguish signal and background events. Two approaches can be followed: 1) exploiting the physics of the detection principle 2) use a physics-agnostic multivariate technique, e.g. a neural network.\n",
+    "\n",
+    "* Study the features of the datasets and compare them for signal and background events\n",
+    "* Study the correlations among the features of the datasets for signal and background events\n",
+    "* Compute the \"mean-scaled-width\" and the \"mean-scale-length\", i.e. rescale by means of their mean and standard deviation the \"Width\" and \"Length\" distributions. Compare them for signal and background events in the cases of little or a lot of light (\"fSize\") \n",
+    "* Perform a Principal Component Analysis on that dataset for the signal and the background events\n",
+    "* Perform a multivariate analysis, without using the parameter `fAlpha` for the classification, with the technique you prefer and evaluate its performance (e.g. in terms of Area Under the (ROC) Curve).\n",
+    "*  If we call \"gammaness\" the score that you give when you classify an event as gamma or hadron (that has been trained without using `fAlpha`), find the gammaness and alpha cuts that are giving the highest quality factor. \n",
+    "\n",
+    "Since you have a dataset that does not correspond to reality (in which hadrons are much more numerous than gammas), we define the quality factor **Q** as:\n",
+    "    \n",
+    "   **Q** = epsilon_gamma / sqrt(epsilon_hadron); where\n",
+    "   \n",
+    "   epsilon_gamma = selected_gammas / total_number_of_gammas\n",
+    "   \n",
+    "   epsilon_hadron = selected_hadrons / total_number_of_hadrons\n",
+    "\n",
+    "* Assuming that the telescope has a collection area of 10^9 cm^2 and that we are observing gamma rays between 50 GeV and 50 TeV, to what observation time does this measurement corresponds? (assume here the Crab spectrum measured by HEGRA [Aharonian, F. et al. 2000])\n",
+    "* Do the same using the MAGIC measured spectrum of the Crab Nebula [Aleksic, J. et al. 2015]\n",
+    "* Plot both spectra and answer if the difference in the observation time that you are obtaining goes in the direction of the difference in the spectra that you are plotting.\n",
     "\n",
     "\n",
     "### Contacts\n",
     "\n",
-    "Samir Suweis <samir.suweis@unipd.it>"
+    "* Ruben Lopez <ruben.lopezcoto@pd.infn.it>, (who is unfortunately not in Padova any more.., his group must be contacted instead, like prof. Michele Doro)\n"
    ]
   },
   {
@@ -40,7 +101,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
