--- a/Project.ipynb
+++ b/Project.ipynb
@@ -544,7 +544,7 @@
    "source": [
     "### 2. Study the correlations\n",
     "\n",
-    "Explain"
+    "In this section we study the correlation of the features separately for signal and background."
    ]
   },
   {
@@ -581,9 +581,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observations\n",
-    "\n",
-    "Explain the following plot"
+    "It can be seen that the most correlated features are the first five. Looking at these, the correlation of the first three is positive, instead the one of fConc1 and fConc2 with respect to the others is negative, in agreement both for signal and background. We can also notice that the correlation between fConc1 and fConc2 is very close to 1, according to the fact that the value of fConc2 is derived from fConc1.\\\n",
+    "The differences in the correlations for the two classes can be seen in the following features:\n",
+    "- fAsym: this feature is slightly more correlated to the others for background events, for signal instead the correlation is null\n",
+    "- fM3Long: the sign of the correlation values computed for this feature is swapped for signal and background\n",
+    "- fAlpha: the values of the angles fAlpha are more correlated to the other features in the case of signal events "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following plot helps to better visualize the correlation of the first five features."
    ]
   },
   {
@@ -617,13 +626,6 @@
     "pairplot = sns.pairplot(data_c, hue='class', plot_kws={'s':0.5}, vars = features[0:5], palette={0:'tab:blue', 1:'tab:orange'})\n",
     "plt.savefig('pairplot.png', dpi=500, transparent=True, bbox_inches='tight')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Observations"
    ]
   },
   {
